--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
-.active{
-    color: red;
+.active {
+  color: red;
+}
+button:hover, a:hover {
+  transform: translateY(-2px);
+  transition-duration: 0.5s;
+  transition-timing-function: "ease-in-out";
 }
