--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,3 +6,6 @@ button:hover, a:hover {
   transition-duration: 0.5s;
   transition-timing-function: "ease-in-out";
 }
+.chakra-spinner{
+  margin-top: 20px;
+}
